# Naga

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  scratch_batch.py  scratch_bench.py  scratch_constrain.py  scratch_fastattn.py  scratch_radix.py
bench/: benchmark_serving.py
examples/: agent_controls_demo.py  agent_sdk_demo.py  mcp_demo_server.py
naga/: __init__.py  __main__.py  agent.py  backend.py  builtins.py  cache.py  clarify.py  cli.py  config.py  constrain.py  conversations.py  docstore.py  embed.py  engine.py  generate.py  hwstats.py  image.py  loader.py  manager.py  mcp.py  memory.py  monitor.py  optimize.py  powermon.py  quantize.py  radix.py  scheduler.py  sdk.py  server.py  tokenizer.py  toolindex.py  trace.py  vlm_cli.py
naga/models/: __init__.py  bert.py  llava.py  qwen2.py  siglip.py
naga/webui/: index.html  monitor.html  naga-render.js  settings.html
tests/: conftest.py  test_agent_controls.py  test_agent_stream.py  test_backend.py  test_batched.py  test_builtins.py  test_clarify.py  test_constrain_pick.py  test_conversations.py  test_image_gen.py  test_last_model.py  test_mcp.py  test_mcp_metadata.py  test_monitor.py  test_optimize.py  test_parse_tool_calls.py  test_peek_toolcall.py  test_prompt_refine.py  test_scheduler.py  test_sdk.py  test_server.py  test_tool_calls.py  test_toolindex.py  test_trace.py  test_trace_e2e.py  test_weather_fallback.py  test_weather_poster.py
